Bug 299150 - Labels and lyrics are not shown for tracks in (main and saved) playlists on Amarok statup
Summary: Labels and lyrics are not shown for tracks in (main and saved) playlists on A...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (other bugs)
Version First Reported In: 2.5-git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-01 09:00 UTC by Daniel Faust
Modified: 2012-05-16 19:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Faust 2012-05-01 09:00:27 UTC
Somehow after saving a track in a playlist it can't be associated with the labels assigned to that track anymore.

This is true for both, the main playlist and the saved playlists.

Reproducible: Always

Steps to Reproduce:
Main Playlist:
1. Add a track with labels to the playlist
2. Check the labels with the Tag Dialog - they should be there
3. Restart Amarok
4. Check the labels with the Tag Dialog - they are gone

Saved Playlists:
1. Add a track from the main playlist to a saved playlist
2. Clear the main playlist and load the saved playlists
3. Check the labels with the Tag Dialog - they should be there
4. Clear the main playlist and retstart Amarok
5. Load the saved playlists
6. Check the labels with the Tag Dialog - they are gone



Running Amarok built from git:
commit 69c568773360ba70f11334a1c70deae0cacb5eff
Date:   Sun Apr 29 11:51:38 2012 +0200
Comment 1 Matěj Laitl 2012-05-01 21:20:48 UTC
I can confirm this. I think that it is connected to the way how Meta::Tracks are re-created from saved files on startup. (because deleting and adding the song back to the playlist rescues the tags)
Comment 2 Matěj Laitl 2012-05-16 13:55:15 UTC
When https://git.reviewboard.kde.org/r/104966/ is merged, this will affect lyrics, too. This gives me hint where the bug is, lets see.
Comment 3 Matěj Laitl 2012-05-16 19:53:40 UTC
Git commit f1475a1060739030fc1bdb06b2557b7560896ace by Matěj Laitl.
Committed on 16/05/2012 at 21:47.
Pushed by laitl into branch 'master'.

MetaProxy: implement more Track and Album methods

BUGFIXES:
 * Lyrics, labels and album actions are correctly displayed for tracks
   from main and saved playlists on Amarok startup
FIXED-IN: 2.6
DIGEST: bugfix

M  +2    -0    ChangeLog
M  +103  -21   src/core-impl/meta/proxy/MetaProxy.cpp
M  +34   -27   src/core-impl/meta/proxy/MetaProxy.h
M  +61   -17   src/core-impl/meta/proxy/MetaProxy_p.h

http://commits.kde.org/amarok/f1475a1060739030fc1bdb06b2557b7560896ace