MetaProxy: implement more Track and Album methods

BUGFIXES:
 * Lyrics, labels and album actions are correctly displayed for tracks
   from main and saved playlists on Amarok startup

BUG: 299150
FIXED-IN: 2.6
DIGEST: bugfix